assets/css/style.css
/* Link to Google Fonts Imports */
@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Quicksand:wght@300..700&display=swap');

/* Variable Fonts and Colors */
:root {
    --primary-font: "Barriecito", sans-serif;
    --secondary-font: "Quicksand", sans-serif;
    --primary-color: #ae0000;
    --secondary-color: #ffce1b;
    --tertiary-color: #FDFBD4;
    --highlight-color: #0a5d00;
}

/* Global Styles */

body {
    background-color: var(--tertiary-color);
    background: url("../images/mixedspices.webp") no-repeat center center/cover;
    padding-top: 74px;
    padding-left: 20px;
    padding-right: 20px;
}

.sub-heading {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

.header {
    border: 5px solid var(--primary-color);
}

header,
main {
    background-color: var(--tertiary-color);
}

main {
    background-color: var(--tertiary-color)!important;
    background: url("../images/golden-lace.png") center/cover;
    background-attachment: fixed;
}

.gallery-main {
    background-color: transparent!important;
    background: none;
}

#header {
    background-image: url("../images/redpeppersmall.png");
    background-color: var(--secondary-color);
    background-position: center top;
    padding-top: 10px;
    max-width: none;
}

h1,
h2 {
    font-family: var(--primary-font);
    color: var(--primary-color);
    text-decoration: underline;
}

h3,
h5 {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

h5 span {
    background-color: var(--secondary-color);
    color: var(--primary-color);
    font-family: var(--primary-font);
    padding: 0.5rem;
    border: 3px solid var(--primary-color);
}

.sub-heading span {
    font-family: var(--primary-font);
    background-color: var(--primary-color);
    color: var(--secondary-color);
    padding: 4px 10px;
}

.display-3 span {
    background-color: var(--secondary-color);
    padding: 0.5px 10px;
    border: 5px solid var(--primary-color);
}


.display-6 span {
    padding: 7px;
}

.merch-section .card {
    border: none;
    background-color: var(--tertiary-color);
    border-radius: 0px;
    margin: 20px auto;
}

.modal * {
    border-radius: 0px;
}

.success {
    font-family: var(--secondary-font);
    color: var(--primary-color);
    font-weight: bold;
}

/* Navbar Styles */

.navbar-brand {
    font-family: var(--primary-font);
    color: var(--secondary-color);
    font-size: xx-large;
}

.navbar-brand:hover {
    color: var(--secondary-color);
}

.nav-text {
    font-family: var(--primary-font);
    color: var(--secondary-color);
    font-size: larger;
}

.nav-text:hover {
    color: var(--tertiary-color);
}

.dropdown-menu {
    background-color: var(--primary-color);
}

#navbar {
    background-color: var(--primary-color);
}

.navbar-nav .nav-item .active {
    text-decoration: underline;
    color: var(--tertiary-color);
}

.dropdown-item:hover {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

.menu-item {
    border: 5px inset var(--secondary-color);
    margin-bottom: 2em;
}

.spice {
    color: var(--highlight-color);
} 

/* Carousel Home Styles */

.carousel-inner {
    height: 0;
    padding-bottom: 65%;
}

.carousel-item {
    position: absolute !important;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.carousel-item img {
    height: 100%;
    object-fit: cover;
}

.carousel-text {
    padding-top: 20px;
    font-family: var(--secondary-font);
    color: var(--primary-color);
    font-weight: bold;
}

/* Mole Home Styles */

.mole {
    width: 250px;
    border: 10px solid var(--primary-color);
    margin-top: 1em;
}

.moletext > p {
    font-family: var(--secondary-font);
    color: var(--primary-color);
    font-weight: bold;
}

.moletext {
    margin-top: 20px;
}

.moletext h5 span {
    background-color: var(--secondary-color);
    border: 3px solid var(--primary-color);
}

/* Merch Styling Section */

.merch {
    width: 250px;
    border: 10px solid var(--primary-color);
    margin-top: 1em;
}

.merchtext {
    margin-top: 20px;
    font-family: var(--secondary-font);
    color: var(--primary-color);
    font-weight: bold;
}

.merchtext h5 span {
    background-color: var(--secondary-color);
    border: 3px solid var(--primary-color);
}

.modal-content {
    background-color: var(--tertiary-color);
}

.card {
    font-family: var(--secondary-font);
    font-weight: bold;
    color: var(--primary-color);
}

.btn {
    color: var(--primary-color);
    background-color: var(--secondary-color);
    border: 3px solid var(--primary-color);
    font-family: var(--primary-font);
    border-radius: 0px;
}


.merchtext h5 span:hover,
.btn:hover {
    background-color: var(--highlight-color);
    color: var(--secondary-color);
    border: 3px solid var(--primary-color);
}

/* Gallery page */

#photos {
    display: table-row;
    justify-content: center;
  }
  
#photos img {
    height: auto;
    width: 100%;
    max-width: 300px;
    max-height: 400px;
}

/* Menu Styling Section */

.menu-header {
    text-align: center;
    color: var(--secondary-color);
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 20px;
}

.menu-header span {
    border: 10px ridge var(--secondary-color);
    background-color: var(--highlight-color);
}

.menu {
    background: url("../images/golden-lace.png") center/cover;
}

.menulink h5{
    padding-top: 20px;
}

.menulink span:hover {
    color: var(--highlight-color);
}

.menu .container {
    border: 5px solid var(--secondary-color);
    background-color: var(--primary-color)!important;
}

.menu-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    text-align: center;
}

.menu-section h5 {
    color: var(--secondary-color);
    text-decoration: underline var(--secondary-color);
}

.menu-section h6 {
    color: var(--secondary-color);
    font-family: var(--secondary-font);
}

.menu-sub {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.menu-item {
    max-width: 18rem;
} 

.menu-item > p {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
    font-weight: bold;
}

.spicy {
    color: var(--secondary-color);
}

/* Footer Styling Section*/

#contact {
    background-image: url("../images/yellowpeppersmall.png");
    background-position: center top;
    background-color: var(--primary-color);
    padding-top: 20px;
    border: 10px solid var(--secondary-color);
}

#contact h2 {
    color: var(--highlight-color);
    text-shadow: -2px -2px 0 rgba(255, 255, 255, 0.5), 2px -2px 0 rgba(255, 255, 255, 0.5), -2px 2px 0 rgba(255, 255, 255, 0.5), 2px 2px 0 rgba(255, 255, 255, 0.5);
}

#contact .social-links i {
    color: var(--highlight-color);
    font-size: 1.9rem;
    transition: color 0.3s ease-in-out;
}

.footerspan:hover {
    background-color: var(--tertiary-color);
    transition: color 0.3s ease-in-out;
}

.footerspan {
    background-color: var(--secondary-color);
    padding: 20px 0px 10px 10px;
    border: 3px solid var(--highlight-color);
}

.social-links h3 {
    color: var(--highlight-color);
    padding-left: 5px;
    padding-right: 20px;
}

.first-section {
    background-color: var(--primary-color);
    border: 3px solid var(--secondary-color);
}

.first-section * {
    color: var(--secondary-color)!important;
}

.address * {
    font: var(--secondary-font);
}

/* Media Queries */

@media only screen and (max-width: 991px) {
    .second-paragraph {
        display: none;
    }

    .follow {
        display: none;
    }
}

@media screen and (max-width: 767px) {

    .carousel-item h5 span {
        visibility: hidden;
    }

}

@media screen and (max-width: 575px) {

    main {
        background: none;
    }

}

@media screen and (min-width: 576px) {
    .carousel {
        width: 80%;
        margin-left: 46px;
    }

    .carousel-text {
        padding: 0px 100px;
    }

    .moletext {
        padding: 0px 100px;
    }

    .merchtext {
        padding: 0px 100px;
    }
}

@media screen and (min-width: 768px) {

    .sub-heading {
        padding-top: 7px;
    }

    #navbar {
        max-width: 100%;
    }

    .carousel {
        width: 80%;
        margin-left: 63px;
    }

    .carousel-item h5 span {
        visibility: visible ;
    }

    .carousel-text {
        padding: 0px 120px;
    } 

    .monthlycurry {
        
        padding-left: 50px;
        padding-right: 50px;
    }

    .moletext {
        padding-left: 100px;
    }

    .mole {
        margin-top: 10px;
    }


    .social-links {
        display: flex;
        justify-content: space-around;
    }

    .contact-section {
        width: 60%;
        padding: 2em;
    }

    .item-space {
        margin-left: 2rem;
    }

    .merch-box {
        padding-left: 60px;
        padding-right: 60px;

    }

    .merch {
        width: 300px;
        border: 10px solid var(--primary-color);
        margin-top: 10px;
    }

    .merch-section {
        display: flex; 
        justify-content: space-evenly;
        padding-left: 120px;
        padding-right: 120px;
    }

    .merch-section .card {
        width: 14rem!important;
        margin: 20px 0px;
    }

    .merch-section .card-space {
        margin-left: 5px;
    }

}

@media screen and (min-width: 992px) {

    .monthlycurry {
        display: flex;
    }

    .moletext {
        padding-left: 20px;
        padding-right: 130px;
    }

    .mole {
        width: 350px;
        margin-left: 130px;
        margin-top: 55px;
    }

    .carousel {
        width: 80%;
        margin-left: 83px;
    }

    .carousel-text {
        padding: 0px 170px;
    }

    .menu > .container {
        width: 70%;
    }

    .menu-item {
        max-width: 14rem;
    } 

    .merch-box {
        padding-left: 80px;
        padding-right: 180px;
    }

    .merch {
        width: 300px;
        border: 10px solid var(--primary-color);
        margin-top: 10px;
        margin-left: 100px;
    }

    .merchtext {
        padding-right: 10px;
    }

    .merch-section .card {
        width: 16rem!important;
    }

}

@media screen and (min-width: 1200px) {

    .carousel {
        width: 80%;
        margin-left: 100px;
    }

    .carousel-text {
        padding: 0px 210px;
    }
    
    .menu > .container {
        width: 100%;
    }

    .moletext {
        padding-left: 10px;
        padding-right: 160px;
    }

    .mole {
        margin-left: 160px;
        margin-top: 10px;
    }

    .merch-box {
        display: flex;
        padding-left: 110px;
        padding-right: 210px;

    }

    .merch {
        width: 400px;
        border: 10px solid var(--primary-color);
        margin-top: 35px;
        margin-left: 10px;
    }

    .merch-section .card {
        width: 18rem!important;
    }

}

@media screen and (min-width: 1400px) {

    .carousel {
        width: 80%;
        margin-left: 117px;
    }

    .carousel-text {
        padding: 0px 250px;
    }

    .moletext {
        padding-left: 60px;
        padding-right: 190px;
    }

    .mole {
        margin-left: 190px;
        margin-top: 10px;
    }

    .merch-box {
        padding-left: 250px;
        padding-right: 280px;

    }

    .merch {
        width: 300px;
        border: 10px solid var(--primary-color);
        margin-top: 20px;
    }

    .merchtext {
        padding-right: 10px;
    }

}

